fix box spacing

--- a/style.css
+++ b/style.css
@@ -228,7 +228,7 @@ input:checked + .slider:before {
 #switchbox {
   position: absolute;
   height: auto;
-  bottom: 50px;
+  bottom: 40px;
   right: 50px;
   font-weight: bold;
   font-size: 14px;
